[1.21.5] Minor 1.21.5 fixes